--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,67 @@
+body {
+	width: 100%;
+	min-width: 1000px;
+	background-image: url('../images/outerspace_landscape.jpeg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin: 0;
+}
 
+nav {
+	position: fixed;
+	background-color: gray;
+	width: 100%;
+	height: 60px;
+	padding: 0 60px;
+}
+
+nav img {
+	border-radius: 50%;
+	border: 2px solid black;
+	height: 50px;
+	margin: 5px 0;
+	vertical-align: middle;
+}
+
+nav ul {
+	list-style: none;
+	display: inline-block;
+	margin: 0;
+}
+
+nav li {
+	display: inline-block;
+}
+
+nav li::after {
+	content: '|';
+	padding-left: 5px;
+}
+
+.animal-design {
+	width: 600px;
+	height: 300px;
+	margin-right: auto;
+	margin-left: auto;
+	top: 300px;
+	position: relative;
+	border: 10px green dotted;
+}
+
+.spacecat, .spacedog {
+	width: 200px;
+	height: 200px;
+	position: absolute;
+}
+
+.spacecat {
+	margin-left: 200px;
+	right: 500px;
+	bottom: 200px;
+}
+
+.spacedog {
+	margin-right: 200px;
+	left: 500px;
+	top: 200px;
+}
