--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,19 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+	height: 300px;
+	width: 300px;
+	padding: 12px;
+}
+
+.float-left {
+	float: left;
+	padding-left: 0;
+}
+
+.float-right {
+	float: right;
+	padding-right: 0;
+}
